fix stretching images
added height: auto

--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -2,6 +2,7 @@
     margin: auto;
     width: 100%;
     max-width: 724px;
+    height: auto;
 }
 
 h2 {
